2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-14  Martin Liska  <mliska@suse.cz>

	PR middle-end/79831
	* doc/invoke.texi (-Wchkp): Document the option.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-13  Martin Liska  <mliska@suse.cz>

	PR middle-end/78339
	* ipa-pure-const.c (warn_function_noreturn): If the declarations
	is a CHKP clone, use original declaration.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2016-06-13  Martin Liska  <mliska@suse.cz>

	PR target/65705
	PR target/69804
	PR sanitizer/71458

	* toplev.c (process_options): Enable MPX with LSAN and UBSAN.
	* tree-chkp.c (chkp_walk_pointer_assignments): Verify that
	FIELD != NULL.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-09  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/79631
	* tree-chkp-opt.c (chkp_is_constant_addr): Call
	tree_int_cst_sign_bit just for INTEGER constants.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-09  Martin Liska  <mliska@suse.cz>

	PR ipa/79761
	* tree-chkp.c (chkp_get_bound_for_parm): Get bounds for a param.
	(chkp_find_bounds_1): Remove gcc_unreachable.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-03  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/79803
	* tree-ssa-loop-prefetch.c (tree_ssa_prefetch_arrays): Remove
	assert.
	(pass_loop_prefetch::execute): Disabled optimization if an
	assumption about L1 cache size is not met.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-03  Martin Liska  <mliska@suse.cz>

	PR rtl-optimization/79574
	* gcse.c (struct gcse_expr): Use HOST_WIDE_INT instead of int.
	(hash_scan_set): Likewise.
	(dump_hash_table): Likewise.
	(hoist_code): Likewise.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-02-17  Martin Liska  <mliska@suse.cz>

	PR rtl-optimization/79574